2007-09-05  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Fix build.

2007-09-04  Wim Taymans  <wim.taymans@gmail.com>

	* sys/v4l2/v4l2src_calls.c:
	(gst_v4l2src_probe_caps_for_format_and_size):
	Add some more debugging in the framerate function.
	Iterate stepwise framerate up to and _including_ the max and if nothing
	was added to the list, add a dummy 0/1 to 100/1 framerate so that we
	don't end up with an empty list.

2007-09-04  Wim Taymans  <wim.taymans@gmail.com>

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_class_init),
	(gst_multiudpsink_set_clients_string),
	(gst_multiudpsink_get_clients_string),
	(gst_multiudpsink_set_property), (gst_multiudpsink_get_property),
	(gst_multiudpsink_init_send), (gst_multiudpsink_add_internal),
	(gst_multiudpsink_add), (gst_multiudpsink_clear_internal),
	(gst_multiudpsink_clear):
	Add property do configure destination address/port pairs
	API:GstMultiUDPSink::clients

2007-09-04  Wim Taymans  <wim.taymans@gmail.com>

	* tests/examples/Makefile.am:
	* tests/examples/rtp/Makefile.am:
	* tests/examples/rtp/client-H263p-AMR.sh:
	* tests/examples/rtp/client-H263p-PCMA.sdp:
	* tests/examples/rtp/client-H263p-PCMA.sh:
	* tests/examples/rtp/client-H264-PCMA.sdp:
	* tests/examples/rtp/client-H264-PCMA.sh:
	* tests/examples/rtp/client-PCMA.sh:
	* tests/examples/rtp/server-VTS-H263p-ATS-PCMA.sh:
	* tests/examples/rtp/server-alsasrc-PCMA.sh:
	* tests/examples/rtp/server-v4l2-H263p-alsasrc-AMR.sh:
	* tests/examples/rtp/server-v4l2-H264-alsasrc-PCMA.sh:
	Added some RTP example scripts for sending and receiving RTP streams.

2007-09-04  Wim Taymans  <wim.taymans@gmail.com>

	* sys/v4l2/gstv4l2src.c: (gst_v4l2_get_caps_info),
	(gst_v4l2src_set_caps), (gst_v4l2src_get_mmap):
	Restructure the setcaps function so that we can also compute the
	expected GStreamer output size of the video frames.
	Set frame_byte_size correctly so that read-based devices have a chance
	of working correctly.